--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
                 <li> <a href="about.html"> About Us </a> </li>
                 <li> <a href="product.html"> Products </a> </li>
                 <li> <a href="contact.html"> Contact </a> </li>
-                <li> <a href="feedback.html"> Contact </a> </li>
+                <li> <a href="feedback.html"> Feedback </a> </li>
                 
             </ul>
 
